test/deca/context/valid/decl_method_void.deca
class A {
    void printHelloWorld() {
        print("Hello World !");
    }
}