test/deca/context/invalid/2_7_method_sans_nom.deca
// Description:
//    methode sans nom
//
// Resultats:
//    Ligne 8

class A {
   void ()  {

   }
}
